--- a/saitae-web/src/main/webapp/pages/cvista.xhtml
+++ b/saitae-web/src/main/webapp/pages/cvista.xhtml
@@ -44,6 +44,7 @@
                                         <f:facet name="input">
                                             <p:selectOneMenu id="console" value="#{a.accesoIndice}" style="width:125px"
                                                              converter="omnifaces.SelectItemsConverter" title="Seleccione un tipo ">
+                                                <f:selectItem itemLabel="Ninguno" itemValue="#{null}"/>
                                                 <f:selectItems value="#{vistasMenuController.accesos}" var="acc"
                                                                itemValue="#{acc}" itemLabel="#{acc.accesoNombre}"/>
                                             </p:selectOneMenu>
