--- a/saitae-web/src/main/webapp/pages/solicitudR.xhtml
+++ b/saitae-web/src/main/webapp/pages/solicitudR.xhtml
@@ -1,10 +1,131 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE composition PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <ui:composition xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-                template="./../WEB-INF/template/plantilla1.xhtml">
+                template="./../WEB-INF/template/plantilla1.xhtml"
+                xmlns:h="http://xmlns.jcp.org/jsf/html"
+                xmlns:p="http://primefaces.org/ui"
+                xmlns:f="http://xmlns.jcp.org/jsf/core">
 
     <ui:define name="content">
-        content
+        <h:form id="form">
+            <h:panelGrid columns="1">
+                <h:panelGrid columns="2">
+                    <p:outputLabel value="Tipo de Recurso a reservar: " for="tr"/>
+                    <p:selectOneMenu id="tr" value="#{reservaSController.tp}" 
+                                     converter="omnifaces.SelectItemsConverter">
+                        <f:selectItem itemLabel="Seleccione" itemValue="#{null}" noSelectionOption="true"/>
+                        <f:selectItems var="tr" itemLabel="#{tr.tipoRecursoNombre}" 
+                                       itemValue="#{tr}" 
+                                       value="#{reservaSController.tiporList}"/>                                                    
+                        <p:ajax event="itemSelect" listener="#{reservaSController.tipoRecursoSelect}"
+                                update=":form"/>
+                    </p:selectOneMenu>    
+                </h:panelGrid>
+                <p:tab id="cra" rendered="#{reservaSController.cra}" >
+                    <p:panel header="Reserva de recursoso del CRA">
+                        <h:panelGrid columns="2">
+                            <p:outputLabel for="tre" value="Dónde será usado el equipo? "/>
+                            <p:selectOneMenu id="tre" value="#{reservaSController.reserva.tipoReserva}" 
+                                             converter="omnifaces.SelectItemsConverter">
+                                <f:selectItem itemLabel="Seleccione" itemValue="#{null}" noSelectionOption="true"/>
+                                <f:selectItems value="#{reservaSController.tiposReserva}" var="tir"
+                                               itemValue="#{tir}" itemLabel="#{tir.tipoReservaNombre}"/>
+                                <p:ajax event="itemSelect" listener="#{reservaSController.tipoReservaSelect}"
+                                        update="rec"/>
+                            </p:selectOneMenu>
+
+                            <p:outputLabel for="gr" value="Grado "/>
+                            <p:selectOneMenu id="gr" value="#{reservaSController.grado}" 
+                                             converter="omnifaces.SelectItemsConverter">
+                                <f:selectItem itemLabel="Seleccione" itemValue="#{null}" noSelectionOption="true"/>
+                                <f:selectItems value="#{reservaSController.grados}" var="gr"
+                                               itemLabel="#{reservaSController.getGradoNombre(gr)}" itemValue="#{gr}"/>
+                                <p:ajax event="itemSelect" listener="#{reservaSController.gradoSelect}"
+                                        update="doc asi"/>
+                            </p:selectOneMenu>
+
+                            <p:outputLabel for="doc" value="Docente: "/>
+                            <p:selectOneMenu id="doc" value="#{reservaSController.reserva.docente}" 
+                                             converter="omnifaces.SelectItemsConverter">
+                                <f:selectItem itemLabel="Seleccione" itemValue="#{null}" noSelectionOption="true"/>
+                                <f:selectItems value="#{reservaSController.maestros}" var="doc"
+                                               itemLabel="#{doc.persona.personaNombre.split(' ')[0]} 
+                                               #{doc.persona.personaApellido.split(' ')[0]}" itemValue="#{doc}"/>
+                                <p:ajax event="itemSelect" listener="#{reservaSController.maestroSelect}"
+                                        update="asi"/>
+                            </p:selectOneMenu>
+
+                            <p:outputLabel for="asi" value="Asignatura"/>
+                            <p:selectOneMenu id="asi" value="#{reservaSController.reserva.maeria}" 
+                                             converter="omnifaces.SelectItemsConverter">
+                                <f:selectItem itemLabel="Seleccione" itemValue="#{null}" noSelectionOption="true"/>
+                                <f:selectItems value="#{reservaSController.materias}" var="mt"
+                                               itemLabel="#{mt.materiaNombre}" itemValue="#{mt}"/>
+                            </p:selectOneMenu>
+
+                            <p:outputLabel for="tem" value="Tema: "/>
+                            <p:inputText id="tem" value="#{reservaSController.reserva.tema}"/>
+
+                            <p:outputLabel for="obj" value="Objetivo del tema: "/>
+                            <p:inputTextarea id="obj" value="#{reservaSController.reserva.objetivoTema}"/>
+
+                            <p:outputLabel for="tpr" value="Tipo de proyecto: "/>
+                            <p:selectOneMenu id="tpr" value="#{reservaSController.reserva.tipoProyecto}" 
+                                             converter="omnifaces.SelectItemsConverter">
+                                <f:selectItem itemLabel="Seleccione" itemValue="#{null}" noSelectionOption="true"/>
+                                <f:selectItems value="#{reservaSController.TProyectos}" var="tP"
+                                               itemLabel="#{tP.tipoProyectoNombre}" itemValue="#{tP}"/>
+                            </p:selectOneMenu>
+
+                            <h:outputLabel for="rec" value="Recursos que solicita"/>
+                            <p:selectCheckboxMenu id="rec" value="#{reservaSController.reservaDetalle}" 
+                                                  label="recursos" multiple="true" filter="true" 
+                                                  filterMatchMode="startsWith" panelStyle="width:250px" 
+                                                  required="true" 
+                                                  requiredMessage="Debe seleccionar al menos un tipo"
+                                                  converter="omnifaces.SelectItemsConverter">
+                                <f:selectItem itemLabel="Seleccione" itemValue="#{null}" noSelectionOption="true"/>
+                                <f:selectItems value="#{reservaSController.recursos}" var="r"
+                                               itemLabel="#{r.nombre}" itemValue="#{r}"/>
+                            </p:selectCheckboxMenu>
+
+                            <p:outputLabel for="fec" value="fecha en la que hará uso del equipo"/>
+                            <p:datePicker id="fec" monthNavigator="true" 
+                                          pattern="EEEEE dd-MMMMM-yyyy" locale="es"/>
+
+                            <p:outputLabel for="hi" value="Hora de inicio del uso"/>
+                            <p:datePicker id="hi" locale="es" value="#{reservaSController.reserva.reservaEntrega}"
+                                          showTime="true" timeOnly="true" hourFormat="12"/>
+
+                            <p:outputLabel for="hf" value="Hora de fin del uso"/>
+                            <p:datePicker id="hf" locale="es" value="#{reservaSController.reserva.reservaDevolucion}"
+                                          showTime="true" timeOnly="true" hourFormat="12"/>
+
+                            <p:outputLabel value="Responsale del equipo: "/>
+                            <p:outputLabel value="#{reservaSController.reservante}"/>
+
+                            <p:outputLabel for="us" value="El equipo será usado por: "/>
+                            <p:selectOneRadio id="us" value="" unselectable="true">
+                                <f:selectItem itemLabel="Docente" itemValue="1" />
+                                <f:selectItem itemLabel="Estudiante" itemValue="2" />
+                                <f:selectItem itemLabel="Grupo de estudiantes" itemValue="3" />
+                            </p:selectOneRadio>
+                        </h:panelGrid>
+                    </p:panel>
+                </p:tab>
+                <p:tab id="lab" rendered="#{reservaSController.lab}" >
+                    <p:panel header="Reserva de recursoso del laboratorio de ciencias naturales">
+                        laboratorio
+                    </p:panel>
+                </p:tab>
+                <p:tab id="bib" rendered="#{reservaSController.bib}" >
+                    <p:panel header="Reserva de recursoso de la biblioteca">
+                        biblioteca
+                    </p:panel>
+                </p:tab>
+            </h:panelGrid>
+        </h:form>            
+        <h:outputScript library="js" name="locales.js"/>
     </ui:define>
 
 </ui:composition>
